Added keywords to Kube project and made it STAR based.

--- a/main.tex
+++ b/main.tex
@@ -81,9 +81,9 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \textbf{Kubernetes based Data Processing Pipeline}  \hfill Oct 2024 - Nov 2024\\ % Project name and location
 \textit{Arizona State University, Tempe, Arizona} % Project link and duration
 \begin{itemize}
-    \item Built a highly scalable and available data processing pipeline that allows near-real-time processing and \textbf{analytics} of document stream data.
+    \item Built a highly scalable and available data processing pipeline that allows near-real-time processing and \textbf{analytics} of NYC Taxi Rides based spatial document stream data.
     \item Managed \textbf{Ku}ber\textbf{netes} deployments of \textbf{Kafka}, \textbf{Zookeeper}, \textbf{Kafka-Connect}, and \textbf{Neo4j} components.
-    \item Tested the pipeline using a document stream as input and performed \textbf{PageRank} and \textbf{Breadth-First Search(BFS)} algorithms on the resulting neo4j graph database. 
+    \item Tested the pipeline using a document stream as input and performed \textbf{PageRank} and \textbf{Breadth-First Search(BFS)} algorithms on the resulting neo4j graph database, establishing individual and relative importance of locations. 
     
 \end{itemize}
 
