--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \textit{Arizona State University, Tempe, Arizona} % Project link and duration
 \begin{itemize}
     \item Built a highly scalable and available data processing pipeline that allows near-real-time processing and \textbf{analytics} of NYC Taxi Rides based spatial document stream data.
-    \item Managed \textbf{Ku}ber\textbf{netes} deployments of \textbf{Kafka}, \textbf{Zookeeper}, \textbf{Kafka-Connect}, and \textbf{Neo4j} components.
+    \item Managed \textbf{Kubernetes} deployments of \textbf{Kafka}, \textbf{Zookeeper}, \textbf{Kafka-Connect}, and \textbf{Neo4j} components.
     \item Tested the pipeline using a document stream as input and performed \textbf{PageRank} and \textbf{Breadth-First Search(BFS)} algorithms on the resulting neo4j graph database, establishing individual and relative importance of locations. 
     
 \end{itemize}
