Added Minikube to technologies in DevOps resume.

--- a/SDE.tex
+++ b/SDE.tex
@@ -44,7 +44,7 @@ tambadamogh@gmail.com \hspace{1mm} $|$ \hspace{1mm} +1(480) 876-5096  \hspace{1m
 \section*{SKILLS}
 \begin{itemize}
     \item \textbf{Languages:} Python, C++, Bash, C, SQL, Scala, HTML, Java, JavaScript, Groovy. % Programming skills
-    \item \textbf{Tools and Technologies:} AWS (EC2, ECR, SQS, S3, Lambda, SNS), Git, Jenkins, Kafka, Spark, Heroku, Azure, Splunk, Zabbix, Docker, Kubernetes, PostgreSQL, MongoDB, GitHub Actions, Cribl, OpenShift. % Software skills
+    \item \textbf{Tools and Technologies:} AWS (EC2, ECR, SQS, S3, Lambda, SNS), Git, Jenkins, Kafka, Spark, Heroku, Azure, Splunk, Zabbix, Docker, Kubernetes, PostgreSQL, MongoDB, GitHub Actions, Cribl, OpenShift, Minikube. % Software skills
     \item \textbf{Libraries and Frameworks:} PyTorch, TensorFlow, Flask, OpenCV, Pandas, Keras, scikit-learn, Nginx, React, Node,js.
 \end{itemize}
 
