--- a/AI.tex
+++ b/AI.tex
@@ -43,7 +43,7 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \section*{SKILLS}
 \begin{itemize}
     \item \textbf{Languages:} Python, C++, Bash, C, SQL, Scala, HTML, Java, JavaScript, Groovy. % Programming skills
-    \item \textbf{Tools and Technologies:} AWS (EC2, ECR, SQS, S3, Lambda, SNS), Git, Jenkins, Kafka, Spark, Heroku, Azure, Splunk, Zabbix, Docker, Kubernetes, PostgreSQL, MongoDB, GitHub Actions, Cribl, OpenShift. % Software skills
+    \item \textbf{Tools and Technologies:} AWS (EC2, ECR, SQS, S3, Lambda, SNS), Git, Jenkins, Kafka, Spark, Heroku, Azure, Splunk, Zabbix, Docker, Kubernetes, PostgreSQL, MongoDB, GitHub Actions, Cribl, OpenShift, Minikube. % Software skills
     \item \textbf{Libraries and Frameworks:} PyTorch, TensorFlow, Flask, OpenCV, Pandas, Keras, scikit-learn, Nginx, React, Node,js.
 \end{itemize}
 
