Added point about Cribl Mask and Parser functions.

--- a/SDE.tex
+++ b/SDE.tex
@@ -56,6 +56,7 @@ tambadamogh@gmail.com \hspace{1mm} $|$ \hspace{1mm} +1(480) 876-5096  \hspace{1m
 \textit{Arch Mortgage Insurance, Greensboro, North Carolina}
 \begin{itemize}
     \item Filtered logs and events going from OpenShift Kubernetes Clusters to \textbf{Splunk} using \textbf{Cribl} stream pipelines, reducing Splunk storage utilization by \textbf{40-50 GB/day} with \textbf{20\%} increase in search time.
+    \item Improved readability of Splunk logs with Cribl's Parser and Mask functions, resulting in a concise, easily searchable '\_raw' field, reducing parsing time to 2-3 seconds per log.
     \item Designed a \textbf{groovy} script to eliminate \textbf{Jenkins GUI} access from the command line, preventing unauthorized access.
     
 
