--- a/DevOps.tex
+++ b/DevOps.tex
@@ -78,33 +78,38 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 % Projects Section
 \section*{PROJECTS}
 
-\textbf{Kubernetes based Data Processing Pipeline}  \hfill Oct 2024 - Nov 2024\\ % Project name and location
-\textit{Arizona State University, Tempe, Arizona} % Project link and duration
+\textbf{End-to-End Infrastructure Automation with Terraform, Ansible and Jenkins} \hfill Oct 2024 - Nov 2024% Project link and duration
 \begin{itemize}
-    \item Built a highly scalable and available data processing pipeline that allows near-real-time processing and \textbf{analytics} of NYC Taxi Rides based spatial document stream data.
-    \item Managed \textbf{Kubernetes} deployments of \textbf{Kafka}, \textbf{Zookeeper}, \textbf{Kafka-Connect}, and \textbf{Neo4j} components.
-    \item Tested the pipeline using a document stream as input and performed \textbf{PageRank} and \textbf{Breadth-First Search(BFS)} algorithms on the resulting \textbf{neo4j} graph database, establishing individual and relative importance of locations. 
+    \item Automated end-to-end infrastructure provisioning using Terraform, Jenkins, and Ansible to deploy and configure EC2 instances in AWS.
+    \item Built a CI/CD pipeline that dynamically retrieved instance IPs, securely provisioned SSH access, and deployed web services without manual intervention.
+    \item Resolved resource and permission issues in a production-like setup, optimizing Jenkins execution within constrained EC2 environments.
+\end{itemize}
+
+\noindent
+\textbf{Kubernetes based Data Processing Pipeline}  \hfill Oct 2024 - Nov 2024% Project name and location
+\begin{itemize}
+    \item Built a scalable, near-real-time data pipeline for spatial analytics on NYC Taxi Rides.
+    \item Ensured reliable and scalable real-time processing by deploying Kafka, Zookeeper, Kafka-Connect, and Neo4j on Kubernetes.
+    \item Ingested document streams and ran PageRank and BFS on Neo4j to evaluate location importance.
     
 \end{itemize}
 
 \noindent
-\textbf{AWS Based Live Face Recognition App}  \hfill Feb 2024 - May 2024\\ % Project name and location
-\textit{Arizona State University, Tempe, Arizona} % Project link and duration
+\textbf{AWS Based Live Face Recognition App}  \hfill Feb 2024 - May 2024 % Project name and location
 \begin{itemize}
-    \item Built a web application using \textbf{Flask API} and \textbf{Gunicorn} server that takes image files as input, performs image recognition, and outputs predictions.
-    \item Created web tier using an AWS \textbf{EC2} instance that receives images via \textbf{HTTP POST} requests and forwards them to AWS \textbf{SQS}.
-    \item Designed an \textbf{auto-scaling} app tier that spawns upto \textbf{20} EC2 instances based on the number of requests in SQS with each of the instances performing image recognition.
-    \item Stored the predictions in \textbf{S3} buckets and sent them back through the web-tier, keeping the overall latency at under \textbf{3 minutes} for \textbf{50} concurrent requests.
+    \item Built a Flask-based web app with Gunicorn for image recognition from uploaded files..
+    \item Deployed web tier on AWS EC2 to handle image uploads via HTTP POST and forward them to S3 using SQS.
+    \item Designed an auto-scaling app tier with up to 20 EC2 instances processing images based on SQS queue depth.
+
     
 \end{itemize}
 
 \noindent
-\textbf{LaTeX to PDF converter using Github Actions} \hfill Oct 2024 - Nov 2024\\% Project link and duration
-\textit{Arizona State University, Tempe, Arizona}
+\textbf{LaTeX to PDF converter using Github Actions} \hfill Oct 2024 - Nov 2024% Project link and duration
 \begin{itemize}
-    \item Designed a \textbf{Github Actions} workflow which is triggered when a .tex file is pushed, automatically converting it to a PDF.
-    \item Used regex based \textbf{shell scripting} to have the current date in PDF commit, allowing efficient tracking of multiple resumes and their versions.
-    \item Hosted the resumes in github.io repository, ensuring constant \textbf{availability} and \textbf{shareability}.
+    \item Designed a GitHub Actions workflow to auto-generate PDFs from .tex files on push.
+    \item Added regex-based shell scripting to include the current date in PDF commits for version tracking.
+    \item Hosted resumes on GitHub Pages for easy access and constant availability.
 \end{itemize}
 
 % End document
