Updates from Overleaf

--- a/DevOps.tex
+++ b/DevOps.tex
@@ -44,7 +44,7 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \begin{itemize}
     \item \textbf{Languages:} Python, C++, Bash, C, SQL, Scala, HTML, Java, JavaScript, Groovy. % Programming skills
     \item \textbf{Tools and Technologies:} AWS (EC2, ECR, SQS, S3, Lambda, SNS), Git, Jenkins, Kafka, Spark, Heroku, Azure, Splunk, Zabbix, Docker, Kubernetes, PostgreSQL, MongoDB, GitHub Actions, Cribl, OpenShift, Minikube. % Software skills
-    \item \textbf{Libraries and Frameworks:} PyTorch, TensorFlow, Flask, OpenCV, Pandas, Keras, scikit-learn, Nginx, React, Node,js.
+    \item \textbf{Libraries and Frameworks:} PyTorch, TensorFlow, Flask, OpenCV, Pandas, Keras, scikit-learn, Nginx, React, Node.js.
 \end{itemize}
 
 % Experience Section
@@ -56,7 +56,7 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \begin{itemize}
     \item Filtered logs and events going from OpenShift Kubernetes Clusters to \textbf{Splunk} using \textbf{Cribl} stream pipelines, reducing Splunk storage utilization by \textbf{40-50 GB/day} with \textbf{20\%} increase in search time.
     \item Improved readability of Splunk logs with Cribl's Parser and Mask functions, resulting in a concise, easily searchable '\_raw' field, reducing parsing time to 2-3 seconds per log.
-    \item Designed a groovy script to eliminate Jenkins GUI access from command line, preventing malicious attacks and improving security.
+    \item Developed a Groovy script to mitigate security risks by removing Jenkins GUI access.
     
 
 \end{itemize}
@@ -66,13 +66,13 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \hfill May 2021 - Jul 2023\\ % Position and duration
 \textit{Oracle Cerner, Bengaluru, India}
 \begin{itemize}
-    \item Engaged with the software development team on \textbf{Splunk} upgrades, troubleshooting, and deployments, ensuring up-to-date servers.
+    \item Collaborated with software development teams for \textbf{Splunk} upgrades, troubleshooting, and deployments, ensuring up-to-date servers.
     \item Migrated 80\% data from On-prem to \textbf{AWS}, making access to data more flexible, secure, and inexpensive.
-    \item Integrated \textbf{Jenkins} and \textbf{GitHub} to maintain important documentation and test merge requests for semantic errors, reducing 1-2 hours per week of manual labour.
-    \item Managed \textbf{CI/CD} pipelines to automate and oversee 300+ bi-weekly microservice deployments for web applications, enabling rapid delivery of new UI and backend features.
-    \item Managed over 10 projects and 400+ tasks to completion through \textbf{JIRA}, resulting in smooth and error-free delivery. 
-\end{itemize}
+    \item Managed 300+ bi-weekly microservice deployments using \textbf{Chef} enabling rapid delivery of new UI and backend features.
+    \item Troubleshot and resolved issues in \textbf{Jenkins} pipelines for cross-functional teams, ensuring timely resolution of support tickets and uninterrupted CI/CD workflows.
+    \item Performed regular \textbf{on-call} rotations, using \textbf{Zabbix} and Splunk to monitor system health, troubleshoot server issues, and quickly resolve production alerts to maintain service reliability.
 
+\end{itemize}
 
 
 % Projects Section
@@ -80,7 +80,7 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 
 \textbf{End-to-End Infrastructure Automation with Terraform, Ansible and Jenkins} \hfill Mar 2025 - Apr 2025% Project link and duration
 \begin{itemize}
-    \item Automated end-to-end infrastructure provisioning using Terraform, Jenkins, and Ansible to deploy and configure EC2 instances in AWS.
+    \item Automated end-to-end infrastructure provisioning with Terraform, Jenkins, and Ansible for efficient AWS EC2 deployment and configuration.
     \item Built a CI/CD pipeline that dynamically retrieved instance IPs, securely provisioned SSH access, and deployed web services without manual intervention.
     \item Resolved resource and permission issues in a production-like setup, optimizing Jenkins execution within constrained EC2 environments.
 \end{itemize}
@@ -88,16 +88,16 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \noindent
 \textbf{Kubernetes based Data Processing Pipeline}  \hfill Oct 2024 - Nov 2024% Project name and location
 \begin{itemize}
-    \item Built a scalable, near-real-time data pipeline for spatial analytics on NYC Taxi Rides.
+    \item Built a scalable, near-real-time data pipeline for spatial analytics on NYC Taxi Rides, enabling rapid insights into ride patterns and supporting data-driven decisions for urban mobility and resource optimization.
     \item Ensured reliable and scalable real-time processing by deploying Kafka, Zookeeper, Kafka-Connect, and Neo4j on Kubernetes.
-    \item Ingested document streams and ran PageRank and BFS on Neo4j to evaluate location importance.
+    \item Ingested document streams and ran PageRank and BFS on Neo4j, which helped evaluate relative importance of locations.
     
 \end{itemize}
 
 \noindent
 \textbf{AWS Based Live Face Recognition App}  \hfill Feb 2024 - May 2024 % Project name and location
 \begin{itemize}
-    \item Built a Flask-based web app with Gunicorn for image recognition from uploaded files..
+    \item Developed a Flask web app using Gunicorn for efficient image recognition from file uploads.
     \item Deployed web tier on AWS EC2 to handle image uploads via HTTP POST and forward them to S3 using SQS.
     \item Designed an auto-scaling app tier with up to 20 EC2 instances processing images based on SQS queue depth.
 
@@ -107,9 +107,9 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \noindent
 \textbf{LaTeX to PDF converter using Github Actions} \hfill Oct 2024 - Nov 2024% Project link and duration
 \begin{itemize}
-    \item Designed a GitHub Actions workflow to auto-generate PDFs from .tex files on push.
+    \item Created a GitHub Actions workflow for seamless PDF generation from .tex files on push, streamlining document production.
     \item Added regex-based shell scripting to include the current date in PDF commits for version tracking.
-    \item Hosted resumes on GitHub Pages for easy access and constant availability.
+    \item Deployed resumes on GitHub Pages to ensure constant accessibility and ease of sharing."
 \end{itemize}
 
 % End document
