Modified DevOps resume to streamline points

--- a/DevOps.tex
+++ b/DevOps.tex
@@ -23,14 +23,14 @@
 % Header
 \begin{center}
 \textbf{\huge Amogh Jagadish Tambad}\\[2pt] % Name
-tambadamogh@gmail.com \hspace{1mm} $|$ \hspace{1mm} +1(480) 876-5096  \hspace{1mm} $|$ \hspace{1mm} $linkedin.com/in/ajtambad/$ \hspace{1mm} $|$ \hspace{1mm} $github.com/Ajtambad$
+tambadamogh@gmail.com \hspace{1mm} $|$ \hspace{1mm} +1(480) 876-5096  \hspace{1mm} $|$ \hspace{1mm} $linkedin.com/in/ajtambad/$ \hspace{1mm}
 \end{center}
 
 % Education Section
 \section*{EDUCATION}
 \noindent
 \textbf{Master of Science}, Computer Science \hfill May 2025 \\ % University name and location
-Arizona State University
+Arizona State University, Tempe, AZ
 \hfill GPA: 3.96/4\\ % Degree and GPA
 \textbf{Relevant Coursework:} Cloud Computing, Data Processing at Scale, Data Mining, Data Visualization\\
 
@@ -54,7 +54,7 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \hfill Jun 2024 - Aug 2024\\ % Position and duration
 \textit{Arch Mortgage Insurance, Greensboro, North Carolina}
 \begin{itemize}
-    \item Filtered logs and events going from OpenShift Kubernetes Clusters to \textbf{Splunk} using \textbf{Cribl} stream pipelines, reducing Splunk storage utilization by \textbf{40-50 GB/day} with \textbf{20\%} increase in search time.
+    \item Filtered logs and events going from OpenShift Kubernetes Clusters to \textbf{Splunk} using \textbf{Cribl} stream pipelines, reducing Splunk storage utilization by \textbf{40-50 GB/day} with \textbf{20\%} reduction in search time.
     \item Improved readability of Splunk logs with Cribl's Parser and Mask functions, resulting in a concise, easily searchable '\_raw' field, reducing parsing time to 2-3 seconds per log.
     \item Developed a Groovy script to mitigate security risks by removing Jenkins GUI access.
     
@@ -66,7 +66,7 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \hfill May 2021 - Jul 2023\\ % Position and duration
 \textit{Oracle Cerner, Bengaluru, India}
 \begin{itemize}
-    \item Collaborated with software development teams for \textbf{Splunk} upgrades, troubleshooting, and deployments, ensuring up-to-date servers.
+    \item Collaborated with software development teams for \textbf{Splunk} upgrades and deployments, ensuring up-to-date servers.
     \item Migrated 80\% data from On-prem to \textbf{AWS}, making access to data more flexible, secure, and inexpensive.
     \item Managed 300+ bi-weekly microservice deployments using \textbf{Chef} enabling rapid delivery of new UI and backend features.
     \item Troubleshot and resolved issues in \textbf{Jenkins} pipelines for cross-functional teams, ensuring timely resolution of support tickets and uninterrupted CI/CD workflows.
@@ -80,9 +80,9 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 
 \textbf{End-to-End Infrastructure Automation with Terraform, Ansible and Jenkins} \hfill Mar 2025 - Apr 2025% Project link and duration
 \begin{itemize}
-    \item Automated end-to-end infrastructure provisioning with Terraform, Jenkins, and Ansible for efficient AWS EC2 deployment and configuration.
-    \item Built a CI/CD pipeline that dynamically retrieved instance IPs, securely provisioned SSH access, and deployed web services without manual intervention.
-    \item Resolved resource and permission issues in a production-like setup, optimizing Jenkins execution within constrained EC2 environments.
+    \item Automated end-to-end infrastructure provisioning with Terraform, Jenkins, and Ansible for efficient AWS EC2 deployment and web server configuration.
+    \item Built a CI/CD pipeline for dynamic IP retrieval, SSH setup, and web service deployment.
+    \item Resolved resource and permission issues, optimizing Jenkins in constrained EC2 environments.
 \end{itemize}
 
 \noindent
@@ -109,7 +109,7 @@ REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
 \begin{itemize}
     \item Created a GitHub Actions workflow for seamless PDF generation from .tex files on push, streamlining document production.
     \item Added regex-based shell scripting to include the current date in PDF commits for version tracking.
-    \item Deployed resumes on GitHub Pages to ensure constant accessibility and ease of sharing."
+    \item Deployed resumes on GitHub Pages to ensure constant accessibility and ease of sharing.
 \end{itemize}
 
 % End document
