--- a/DevOps.tex
+++ b/DevOps.tex
@@ -63,7 +63,7 @@
     \experienceItem[
         company={Arch Mortgage Insurance},
         location={Greensboro, NC},
-        position={IT-Infrastructure-Platform/SRE Intern},
+        position={IT-Infrastructure-Platform/Site Reliability Engineer Intern},
         duration={Jun 2024 - Aug 2024}
     ]
     \begin{itemize}
