Adding file renaming after push, to test

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -35,7 +35,7 @@
         graduation={May 2021},
         grade={3.77 GPA},
         program={Bachelor of Technology, Computer Science},
-        coursework={Data Structure and Algorithms, Operating Systems, Cloud Computing},
+        coursework={Data Structure and Algorithms, Operating Systems},
     ]
 \end{educationSection}
 % --------- Skills -----------
