--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -35,7 +35,7 @@
         graduation={Aug 2017 - May 2021},
         grade={3.77 GPA},
         program={Bachelor of Technology, Computer Science},
-        coursework={Data Structure and Algorithms, Operating Systems, Cloud Computing},
+        coursework={Data Structure and Algorithms, Operating Systems},
     ]
 \end{educationSection}
 % --------- Skills -----------
