trivial changes to compile PDF

--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -28,7 +28,7 @@
         grade={4.00 GPA},
         program={Master of Science, Computer Science},
         coursework={Cloud Computing, Data Processing at Scale, Data Mining, Software Security},
-    ]
+    ] % ASU
 
     \educationItem[
         university={REVA University, Bangalore, India},
