trivial changes to compile PDF pt2

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -69,7 +69,7 @@
     \begin{itemize}
         \itemsep -6pt {}
         \item Filtered and routed logs from OpenShift Kubernetes clusters to Splunk using Cribl Stream pipelines, reducing \textbf{daily Splunk storage usage by 40–50 GB} and improving \textbf{log search performance by 20\%}.
-        \item Enhanced log clarity and parsing efficiency by leveraging Cribl Parser and Mask functions, resulting in a streamlined raw field and reducing parsing time to 2–3 seconds per log.
+        \item Enhanced log clarity and parsing efficiency by leveraging Cribl Parser and Mask functions, resulting in a streamlined raw field and reducing parsing time to 2 seconds per log.
         \item Designed an automated pipeline using Ansible and Red Hat registry APIs to sync updated catalog images to Nexus Repository, reducing manual update time by\textbf{ 90\%}.
         
     \end{itemize}
