--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -46,7 +46,7 @@
     ] \\
     \skillItem[
         category={Technologies},
-        skills={AWS, GCP, Linux, PowerShell, PostmanAPI, Splunk, Cribl, Zabbix, Chef, Ansible, Terraform, Docker, Kubernetes, Jenkins, Github Actions, Nginx, Gunicorn}
+        skills={AWS, GCP, Linux, PowerShell, PostmanAPI, Splunk, Cribl, Zabbix, Chef, Ansible, Terraform, Docker, Kubernetes, Helm, Jenkins, Github Actions, Nginx, Gunicorn}
     ] \\
     \skillItem[
         category={Frameworks},
