--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -111,7 +111,7 @@
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Designed and deployed a scalable, near-real-time data pipeline on Kubernetes using Helm for streamlined deployment and configuration, enabling spatial analytics of NYC Taxi Rides to support data-driven decisions for urban mobility through efficient ride pattern processing.
+        \item Designed and deployed a scalable, near-real-time data pipeline on Kubernetes with Helm, enabling spatial analytics of NYC Taxi Rides for data-driven urban mobility insights.
         \item Leveraged Kafka, Kafka Connect, ZooKeeper, and Neo4j for real-time ingestion and graph processing (PageRank, BFS), uncovering location importance and optimizing resource allocation.
     \end{itemize}
 
