Trying to update SDE.tex with previous push, which failed earler

--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -46,7 +46,7 @@
     ] \\
     \skillItem[
         category={Technologies},
-        skills={AWS, Linux, PowerShell, PostmanAPI, Splunk, Cribl, Zabbix, Chef, Ansible, Terraform, Docker, Kubernetes, Helm, Jenkins, Github Actions, Nginx, Gunicorn}
+        skills={AWS, Linux, PowerShell, PostmanAPI, Splunk, Cribl, Zabbix, Chef, Ansible, Terraform, Docker, Kubernetes, Jenkins, Helm, Github Actions, Nginx, Gunicorn}
     ] \\
     \skillItem[
         category={Frameworks},
