Bolded some points in my Cerner experience

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -82,10 +82,10 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Migrated 80\% of data from on-prem to AWS, enhancing data access flexibility, security, and cost-efficiency.
-        \item Participated in regular on-call rotations, leveraging Zabbix and Splunk for system health monitoring, troubleshooting server issues, and resolving production alerts within 15 minutes, maintaining 99.99\% service reliability.
-        \item Troubleshot and resolved Jenkins pipeline issues, minimizing support ticket resolution time by 40\% and ensuring 99.9\% uptime for CI/CD workflows, leading to uninterrupted deployment pipelines.
-        \item Managed 300+ bi-weekly microservice deployments, including Splunk and non-Splunk-based services, using Chef, accelerating delivery of new UI and backend features in a fast-paced production environment.
+        \item Migrated 80\% of data from on-prem to \textbf{AWS}, enhancing data access flexibility, security, and cost-efficiency.
+        \item Participated in regular on-call rotations, leveraging \textbf{Zabbix} and \textbf{Splunk} for system health monitoring, troubleshooting server issues, and resolving production alerts within 15 minutes, maintaining \textbf{99.99\%} service reliability.
+        \item Troubleshot and resolved \textbf{Jenkins} pipeline issues, minimizing support ticket resolution time by \textbf{40\%} and ensuring \textbf{99.9\%} uptime for \textbf{CI/CD} workflows, leading to uninterrupted deployment pipelines.
+        \item Managed \textbf{300+} bi-weekly microservice deployments, including Splunk and non-Splunk-based services, using \textbf{Chef}, accelerating delivery of new UI and backend features in a fast-paced production environment.
     \end{itemize}
 
 \end{experienceSection}
